--- a/TiendaVirtualAlejandro/Views/Cliente/MiPerfil.cshtml
+++ b/TiendaVirtualAlejandro/Views/Cliente/MiPerfil.cshtml
@@ -34,7 +34,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.EmailId, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Email", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => User.Identity.Name, new { htmlAttributes = new { @class = "form-control", disabled = "True" } })
                 @Html.ValidationMessageFor(model => model.EmailId, "", new { @class = "text-danger" })
