Añadida barra de búsqueda

--- a/TiendaVirtualAlejandro/Views/Pedido/Details.cshtml
+++ b/TiendaVirtualAlejandro/Views/Pedido/Details.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalles</h2>
 
 <div>
     <h4>Pedido</h4>
@@ -62,5 +62,5 @@
     @Html.Label("Total Pedido")
 </p>
 <p>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver a la lista", "Index")
 </p>
