--- a/TiendaVirtualAlejandro/Views/Pedido/Index.cshtml
+++ b/TiendaVirtualAlejandro/Views/Pedido/Index.cshtml
@@ -26,7 +26,9 @@
     {
         <tr>
             <td>
-                @Html.ActionLink("" + item.PedidoId, "Details", new { id = item.PedidoId })
+                <a href="@Url.Action("Details", new { id = item.PedidoId })">
+                    @("P-" + item.PedidoId.ToString("0000"))
+                </a>
             </td>
             <td>
                 @{
@@ -49,7 +51,7 @@
                 }
             </td>
             <td>
-                @Html.ActionLink("Details", "Details", new { id = item.PedidoId })
+                @Html.ActionLink("Detalles", "Details", new { id = item.PedidoId })
             </td>
         </tr>
     }
