--- a/TiendaVirtualAlejandro/Views/Producto/Delete.cshtml
+++ b/TiendaVirtualAlejandro/Views/Producto/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2></h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Estás seguro que deseas eliminar este producto?</h3>
 <div>
-    <h4>Producto</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -24,23 +23,19 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Precio)
+            @Html.DisplayFor(model => model.Precio) €/Kg
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Foto)
+            @Html.DisplayNameFor(model => model.Categoria)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Foto)
+            @Html.DisplayFor(model => model.Categoria)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Descripcion)
-        </dt>
-
         <dd>
-            @Html.DisplayFor(model => model.Descripcion)
+            <img src="~/Content/Fotos/@Model.Foto" style="max-width: 500px;max-height:500px" />
         </dd>
 
     </dl>
@@ -49,8 +44,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Eliminar" class="btn btn-default" /> |
+            @Html.ActionLink("Volver a la lista", "Index")
         </div>
     }
 </div>
