--- a/TiendaVirtualAlejandro/Views/Producto/Index.cshtml
+++ b/TiendaVirtualAlejandro/Views/Producto/Index.cshtml
@@ -4,11 +4,14 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Productos</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+@if (this.User.IsInRole("Admin"))
+{
+    <p>
+        @Html.ActionLink("Crear nuevo producto", "Create")
+    </p>
+}
 <table class="table">
     <tr>
         <th>
@@ -20,54 +23,59 @@
         <th>
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Descripcion)
+            @Html.DisplayName("Descripción")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Categoria)
+            @Html.DisplayName("Categoría")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.CantidadAlmacen)
+            @Html.DisplayName("Cantidad en almacén")
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-<tr>
-    <td>
-        @Html.ActionLink(item.Nombre, "Details", new { id = item.Id })
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Precio) €/Kg
-    </td>
-    <td>
-        <img src="~/Content/Fotos/@item.Foto" style="max-width: 100px;" />
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Descripcion)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Categoria)
-    </td>
-    <td>
-        @if (item.CantidadAlmacen > 0)
-        {
-            @Html.DisplayFor(modelItem => item.CantidadAlmacen); @:Kg
-        }
-        else
-        {
-            @Html.Label("Sin stock");
-        }
-    </td>
-    <td>
-        @if (item.CantidadAlmacen > 0)
-        {
-            @Html.ActionLink("Add To Cart", "AddToCart", new { id = item.Id }, new { htmlAttributes = new { @class = "form-control" } })
-        } |
-        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-    </td>
-</tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.ActionLink(item.Nombre, "Details", new { id = item.Id })
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Precio) €/Kg
+            </td>
+            <td>
+                <img src="~/Content/Fotos/@item.Foto" style="max-width: 100px;" />
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Descripcion)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Categoria)
+            </td>
+            <td>
+                @if (item.CantidadAlmacen > 0)
+                {
+                    @Html.DisplayFor(modelItem => item.CantidadAlmacen); @:Kg
+                }
+                else
+                {
+                    @Html.Label("Sin stock");
+                }
+            </td>
+            <td>
+                @if (item.CantidadAlmacen > 0)
+                {
+                    @Html.ActionLink("Añadir al carro", "AddToCart", new { id = item.Id }, new { htmlAttributes = new { @class = "form-control" } }) @:|
+                }
+                @Html.ActionLink("Detalles", "Details", new { id = item.Id })
+                @if (this.User.IsInRole("Admin"))
+                {
+                    @:|
+                    @Html.ActionLink("Editar", "Edit", new { id = item.Id }); @:|
+                    @Html.ActionLink("Eliminar", "Delete", new { id = item.Id });
+                }
+            </td>
+        </tr>
+    }
 
 </table>
