Asociar nuevo usuario al rol Comprador

--- a/TiendaVirtualAlejandro/Views/Home/Index.cshtml
+++ b/TiendaVirtualAlejandro/Views/Home/Index.cshtml
@@ -2,8 +2,7 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>BIENVENIDO</h1>
+<div class="jumbotron" style="padding:2em">
     <p class="lead">Selecciona una categoría:</p>
 </div>
 
