--- a/TiendaVirtualAlejandro/Views/Shared/_Layout.cshtml
+++ b/TiendaVirtualAlejandro/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                         {
                             <div class="col-xs-4 col-sm-12">
                                 <div class="input-group">
-                                    <input type="text" id="busqueda" name="busqueda" class="form-control" maxlength="15" placeholder="Escribe algo..." />
+                                    <input type="text" id="busqueda" name="busqueda" class="form-control" maxlength="15" placeholder="Buscar..." />
                                     <div class="input-group-btn">
                                         <button class="btn" type="submit"><span class="glyphicon glyphicon-search"></span></button>
                                     </div>
