--- a/TiendaVirtualAlejandro/Views/Pedido/MiCarrito.cshtml
+++ b/TiendaVirtualAlejandro/Views/Pedido/MiCarrito.cshtml
@@ -80,7 +80,11 @@
     @Html.Label("Total Carrito")
     @Html.DisplayFor(c => Model.Total) €
 </p>
-@if (this.User.Identity.IsAuthenticated && Model.Any())
+@if (Model.Any())
 {
     @Html.ActionLink("Tramitar pedido", "Purchase", "Pedido", null, htmlAttributes: new { @class = "control-label col-2" })
 }
+<p></p>
+<div>
+    @Html.ActionLink("Volver", "Index", "Home")
+</div>
